# MathsLibrary

./: .gitignore  CMakeLists.txt  MathsLibrary.sln  MathsLibrary.vcxproj  MathsLibrary.vcxproj.filters  abstract_module.h  complex.cpp  complex.h  field.h  finite_dimensional_module.cpp  finite_dimensional_module.h  finite_dimensional_vector_space.cpp  finite_dimensional_vector_space.h  free_algebra.cpp  free_algebra.h  group.h  guassian_integer.cpp  guassian_integer.h  integer.cpp  integer.h  integral_ring.cpp  integral_ring.h  main.cpp  maths_concepts.h  matrix.h  out.txt  polynomial.h  rational_extension.h  real_field.cpp  real_field.h  ring.h  square_matrix.h  vector_space.h
absalg/: cyclic.cpp  cyclic.h  direct_product.h  field.h  group.h  integral_ring.h  rational_extension.h  ring.h  ring_extension.h
analysis/: derivator.h  finite_dimensional_inner_product_space.h  fourier_transform.h  function.h  general_function.h  integrable_function.h  integral_transform.h  integrator.h  laplace_tranform.h  normed_finite_dimensional_space.h  normed_space.h  sequence.h  transforms.h
examples/: curl_theorem_verification.cpp  divergence_verification.cpp  divergence_verification_plane.cpp  factorisation.cpp  green_theorem_verification.cpp  polynomial_multiplication_benchmark.cpp
linalg/: abstract_module.h  eigen.h  finite_dimensional_module.h  finite_dimensional_vector_space.h  matrix.h  matrix_factory.h  square_matrix.h  square_matrix.old  vector_space.h
multialg/: tensor.h
nt/: arithmetic_function.cpp  arithmetic_function.h  factoriser.cpp  factoriser.h  utils.cpp  (+1 more)
(+116 files in other folders)
